# Connect

./: .dockerignore  .gitignore  ARCHITECTURE.md  CMakeLists.txt  CMakeLists_server.txt  Connect.cpp  Connect.h  ConnectMessenger.desktop  DEPLOYMENT.md  Dockerfile  INSTALL_DOCKER.md  Messenger.cpp  Messenger.h  QUICK_START.md  README.md  STATUS.md  build_project.bat  build_project.sh  check_syntax.bat  docker-compose.yml  fly.toml  main.cpp  railway.json  render.yaml  start_client.bat  start_client.sh  start_server.bat  start_server.sh  test_build.bat  test_websocket.html  vcpkg.json  web_client.html
include/: Database.h  Encryption.h  WebSocketServer.h
server/: Database.cpp  Encryption.cpp  WebSocketServer.cpp
ui/qt-frontend/: ChatWidget.cpp  ChatWidget.h  ContactListWidget.cpp  ContactListWidget.h  MessengerClient.cpp  MessengerClient.h  main_client.cpp
